--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="gradient_sprite.png" />
+    <Image Include="sandfloor1.png" />
     <Image Include="test.png" />
     <Image Include="testsprite.png" />
   </ItemGroup>
