--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
@@ -94,6 +94,9 @@
     <Image Include="testsprite.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="sandfloor1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="Randomize12.bfxrsound">
