--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Platform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h">
@@ -83,15 +86,12 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="test.png">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="gradient_sprite.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="testsprite.png">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="sandfloor1.png">
