--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
@@ -64,6 +64,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>windowscodecs.lib;d2d1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -96,7 +97,10 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="gradient_sprite.png" />
-    <Image Include="sandfloor1.png" />
+    <Image Include="sanddunes.png" />
+    <Image Include="sandfloor1.png">
+      <DeploymentContent>true</DeploymentContent>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="Randomize12.bfxrsound" />
