--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj
@@ -83,9 +83,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="MenuButton.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleCollection.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="rectangle.cpp" />
+    <ClCompile Include="sparkParticle.cpp" />
     <ClCompile Include="SpriteSheet.cpp" />
     <ClCompile Include="Spy.cpp" />
   </ItemGroup>
@@ -105,9 +108,12 @@
     <ClInclude Include="Level1Button.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="MenuButton.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleCollection.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="rectangle.h" />
+    <ClInclude Include="sparkParticle.h" />
     <ClInclude Include="SpriteSheet.h" />
     <ClInclude Include="spy.h" />
   </ItemGroup>
