--- a/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
+++ b/c++direct2dapp/c++direct2dapp/c++direct2dapp.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="smokeParticle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shellParticle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SmokeParticle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shellParticle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
